--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hibike_packet"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["baby-bell <baby-bell@users.noreply.github.com>"]
 
 [lib]
@@ -11,6 +11,11 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 cpython = "0.2"
 rand = "0.4"
 memchr = "2"
+serde = "1"
+serde_json = "1"
+serde_derive = "1"
+lazy_static = "1"
+byteorder = "1"
 
 [profile.release]
 panic = "abort"
